<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <EditText
            android:textColor="#000000"
            android:textColorHint="#85b3ff"
            android:background="@color/white"
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_piz"
            android:layout_margin="16dp" />

        <EditText
            android:textColor="#000000"
            android:textColorHint="#85b3ff"
            android:background="@color/white"
            android:id="@+id/editTextContent"
            android:layout_width="match_parent"
            android:hint="@string/sosinfo_piz"
            android:layout_height="500dp"
            android:layout_margin="16dp"/>

        <Button
            android:id="@+id/send_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="#ffffff"
            android:hint="@string/send_sos"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
</LinearLayout>



