<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt"
    android:background="@color/dialog_btn_blue"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btn_close"
        android:background="@null"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:src="@drawable/btn_x"
        android:scaleType="fitXY"
        android:layout_alignParentEnd="true"/>

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_close"
        android:animateLayoutChanges="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/login_01"
                android:lineSpacingExtra="12sp"
                android:layout_marginStart="20dp"
                android:letterSpacing="0.3"/>
            <View
                android:background="#3d80ff"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="80dp"/>
            <EditText
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:textColorHint="#85b3ff"
                android:id="@+id/edt_username"
                android:background="@color/white"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/login_02"
                android:inputType="text"
                android:textCursorDrawable="@color/material_blue_grey_800"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>
            <View
                android:background="@color/text_gray"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <EditText
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:textColorHint="#85b3ff"
                android:id="@+id/edt_password"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/login_03"
                android:inputType="textPassword"
                android:textCursorDrawable="@color/material_blue_grey_800"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>
            <View
                android:background="#3d80ff"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="80dp">

                <LinearLayout
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:id="@+id/layout_join"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp">

                    <TextView
                        android:textSize="12sp"
                        android:textColor="#ffffff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Accept_join"
                        android:lineSpacingExtra="6sp"/>
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <Button
                    android:enabled="false"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_gravity="end"
                    android:id="@+id/btn_login"
                    android:background="@color/white"
                    android:layout_width="128dp"
                    android:layout_height="match_parent"
                    android:text="@string/Accept_login"
                    android:paddingStart="12dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>